<resources>
    <string name="app_name">Inventario Sanidad</string>

    <!-- Strings para la parte del Login -->
    <string name="bienvenido">¡Bienvenido!</string>ç
    <string name="inicio">Inicia sesión en tu cuenta</string>
    <string name="correo">Correo Electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="entrar">ENTRAR</string>
    <string name="usuario_incorrecto">Usuario incorrecto</string>
    <string name="usu_con_inco">Usuario o Contraseña Incorrectos</string>
    <string name="usuario_no_encontrado">Usuario no encontrado</string>
    <string name="contrasena_incorrecta">Contraseña incorrecta</string>
    <string name="error_red">Error de red</string>
    <string name="error_respuesta">Error de respuesta</string>
    <string name="error_servidor">Error de servidor</string>
    <string name="descripcion">Pulsar para mostrar la contraseña</string>

    <!-- Strings para usuario -->
    <string name="estudiante_usua">Estudiante</string>

    <!-- Strings para Inventario usuario -->
    <string name="no_inventario">No se pudo cargar inventario</string>
    <string name="in_nombre">Nombre</string>
    <string name="in_unidades">Unidades</string>
    <string name="in_almacen">Almacén</string>
    <string name="in_armario">Armario</string>
    <string name="in_reintentar">Reintentar</string>
    <string name="lista_de_materiales_del_inventario">Lista de materiales del inventario</string>
    <!-- Strings para tarjeta de usuario -->
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="rol">Rol</string>

    <!-- Strings para salir -->
    <string name="est_s_apunto_de_cerrar_sesi_n">ESTÁS APUNTO DE CERRAR SESIÓN</string>
    <string name="quedarme">Quedarme</string>
    <string name="salir">Salir</string>


    <!-- Strings para la tabla de cada material -->
    <string name="nombre">Nombre</string>
    <string name="unidades">Unidades</string>
    <string name="almacen">Almacen</string>
    <string name="armario">Armario</string>

    <!-- Strings para la parte de la tarjeta de cada material -->
    <string name="material_t">Material</string>
    <string name="nombre_t">Nombre:</string>
    <string name="unidades_t">Unidades:</string>
    <string name="almacen_t">Almacen:</string>
    <string name="armario_t">Armario:</string>
    <string name="estante_t">Estante:</string>
    <string name="unidades_minimas_t">Unidades Mínimas:</string>
    <string name="descripcion_t">Descripción:</string>
    <string name="nombre_del_material">Nombre del material</string>
    <string name="cantidad">Cantidad</string>
    <string name="cantidad_anandir_item">Cantidad:</string>
    <string name="historial_de_materiales">Historial de Materiales</string>






    <!-- Strings para la parte del profesor-->
    <string name="profesor">Profesor</string>

















    <!-- Strings para administrar usuarios -->
    <string name="busqueda_usuarios">Buscar por nombre, correo o tipo...</string>
    <string name="btnananir">Añadir</string>
    <string name="btn_borrar">Quitar</string>
    <string name="btn_cambiar">Cambiar</string>
    <string name="tipo">Tipo</string>
    <string name="tipos">Tipo:</string>


</resources>