<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">


        <ImageView
            android:id="@+id/imgWarning"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/warning"
            android:layout_marginBottom="16dp"
            android:padding="16dp"/>


        <TextView
            android:id="@+id/tvLogoutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/est_s_apunto_de_cerrar_sesi_n"
            android:fontFamily="@font/inter2"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnQuedarme"
                style="@style/Button.Danger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quedarme"
                android:fontFamily="@font/inter2"
                android:backgroundTint="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnSalir"
                style="@style/Button.Danger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/salir"
                android:fontFamily="@font/inter2"
                android:backgroundTint="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

